status update is done
